# link

./: .gitignore  LICENSE  README.md  pose.py  setup.cfg  vis.py
docs/: .buildinfo  Makefile  camera_visualizer.html  camera_visualizer.ipynb  documentation.html  epipolar_constraint.html  examples.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/.doctrees/: camera_visualizer.doctree  documentation.doctree  environment.pickle  epipolar_constraint.doctree  examples.doctree  index.doctree
docs/_sources/: documentation.rst.txt  index.rst.txt
docs/source/: conf.py  examples.rst  index.rst
examples/camera_visualizer/: camera_dict_A.json  camera_dict_B.json
examples/epipolar_constraint/: epipolar_constraint.ipynb
link/: camera_visualizer.py  correspondence.ipynb  correspondence.py  geometry.py  labwidget.py  linalg.py  paintwidget.py  plot.py  util.py
link/david/: paintwidget.py  renormalize.py
