[metadata]
name = link
version = 0.0.1
author = Yen-Chen Lin
author_email = yenchenlin1994@gmail.com
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yenchenlin/link
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True